# boltztrap2_aims_utils

./: README.md  pyproject.toml
boltztrap2_aims_utils/: boltztrap2_aims_utils.py  myemc.py
examples/Si_SOC_conductive_effmass/: parameters.ase  run.sh  test.py
examples/Si_SOC_emc_effmass/: KPOINTS  aims.out  control.in  geometry.in  geometry.in.aflow  test.py
